On mobile, add gradient to fixed topnav for legibility. Fix gallery dimensions. Add new folder to keep track of edits to css for dreamovercomic.com

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -33,14 +33,14 @@ a{
 .nav-a{
     color: #fff;
     text-shadow: 2px 2px royalblue;
+    filter: drop-shadow(0px 0px 1px royalblue);
 }
-
-
 
 .h1-name{ 
     color: #fff;
     text-shadow: 2px 2px royalblue;
-    padding: 15px
+    padding: 15px;
+    filter: drop-shadow(0px 0px 1px royalblue);
 }
 
 .overlay-content{ /* fullscreen overlay nav */
@@ -69,7 +69,7 @@ a{
     background: linear-gradient(to right, violet, cyan, aqua, pink, yellow, salmon, red);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0px 0px 1px black);
+    filter: drop-shadow(0px 0px 2px black);
 }
 
 .black-bg h2{
@@ -99,6 +99,7 @@ a{
 .about-descr p{
     color: #fff;
     text-shadow: 2px 2px royalblue;
+    filter: drop-shadow(0px 0px 1px royalblue);
     font-weight: bold;
 }
 
