--- a/css/nav-styles.css
+++ b/css/nav-styles.css
@@ -128,7 +128,8 @@ a.anchor {
 
 	.bar{
 		justify-content: flex-start;
-		background: transparent !important;
+		/*background: transparent !important;*/
+		background: linear-gradient(180deg, rgba(0,0,0,0.5), transparent) !important;
 	}
 
 	.bar .nav-item{
